[package]
name = "bit-array"
version = "0.4.3"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>", "Adam Baxter"]
license = "MIT/Apache-2.0"
description = "A compile time sized array of bits"
repository = "https://github.com/ambaxter/bit-array"
homepage = "https://github.com/ambaxter/bit-array"
documentation = "https://contain-rs.github.io/bit-vec/bit_vec"
keywords = ["data-structures", "bitarray", "bitmask", "bitmap", "bit"]
readme = "README.md"

[dependencies]
bit-vec = "0.4"
typenum = "1.3"
generic-array = "0.3"

[dev-dependencies]
rand = "0.1"

[features]
nightly = []
